--- a/style.css
+++ b/style.css
@@ -1,6 +1,4 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech&display=swap');
 
 *{
     margin: 0;
@@ -15,11 +13,11 @@ body{
 
 
 .nome{
-    height: 100vh;
+    height: 90vh;
     background-image: linear-gradient(to top, rgb(247, 81, 206),#1403feb6);
     backdrop-filter: blur(10px);
     border-radius: 0px 0px 10px 10px;
-    font-family: "3ds", cursive;
+    font-family: 'Share Tech', sans-serif;
     font-variant: small-caps;
     display: flex;
     flex-direction: column;
