--- a/style.css
+++ b/style.css
@@ -11,7 +11,9 @@
     
 }
 
-
+body{
+    color: rgb(252, 252, 252);
+}
 
 .nome{
     height: 90vh;
@@ -33,7 +35,7 @@
 .mnome{ 
     text-align: center;
     width: 50vmax;
-    font-size: 3.5vw;
+    font-size: 4vw;
     margin-top: 32px;
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.178);
 }
@@ -76,9 +78,9 @@
 }
 
 .links{
+    
     display: flex;
     align-items: center;
-    
     border: 1px solid rgb(0, 0, 0);
     width: 45vw;
     margin: 10px;
@@ -89,11 +91,77 @@
     text-align: center;
 
 }
-
 .links p{
     padding-left: 24px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 
+a#fb{
+    transition-duration: .4s;
+}
 
+a#fb:hover{
+    color: white;
+    font-weight: bold;
+    background-color: rgb(51, 51, 201);
+    border: 1px solid white;
+}
+
+a#insta{
+    transition-duration: .5s;
+}
+
+a#insta:hover{
+    color: white;
+    font-weight: bold;
+   background-image: linear-gradient(to left,#5659A8,#EF444C,#FCBB57,#FDD373);
+   border: 1px solid white;
+}
+
+a#link{
+    transition-duration: .5s;
+}
+
+a#link:hover{
+    color: white;
+    font-weight: bold;
+    background-color: #006199;
+   border: 1px solid white;
+}
+
+a#zap{
+    transition-duration: .5s;
+}
+
+a#zap:hover{
+    color: white;
+    font-weight: bold;
+   background-color: #2EC84E;
+   border: 1px solid white;
+}
+
+
+a#tg{
+    transition-duration: .5s;
+}
+
+a#tg:hover{
+    color: white;
+    font-weight: bold;
+   background-color: #0190C3;
+   border: 1px solid white;
+}
+
+
+
+a#em{
+    transition-duration: .5s;
+}
+
+a#em:hover{
+    color: white;
+    font-weight: bold;
+   background-color: #D44136;
+   border: 1px solid white;
+}
