--- a/style.css
+++ b/style.css
@@ -29,8 +29,12 @@ body{
     justify-content: center;
    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.808);
   position: relative;
+  transition: .4s;
 
    
+}
+.nome:hover{
+    background-color: rgb(29, 28, 28);
 }
 
 .mnome{ 
@@ -66,7 +70,9 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: .4s;
 }
+
 
 .links{
     
@@ -164,8 +170,8 @@ ion-icon#cima{
 }
 
 ion-icon#baixo{
-    position: absolute;
-    left: 48.5%;
+    margin-top: 70px;
+    margin-bottom: 0;
     bottom: 10px;
     font-size: 3em;
     transition: .4s;
